version 1.1.10 fixed landing page on safari

--- a/src/App.css
+++ b/src/App.css
@@ -186,6 +186,7 @@ a#btnRun{
     100% {
     opacity: 0;
     display: none;
+    z-index: 1;
     }
 }
 
